[FIX] mass_mailing: fixed buttons alignment issue for outlook
If you add multiple buttons in the single row. Outlook was showing them into
separate lines.

An outlook hack was added previously to fix the button background issue but when
we add multiple inline buttons in single row then buttons are displayed
in separate lines. To fix this issue we have wrapped these buttons inside the
table cells.

--- a/addons/mass_mailing/static/src/css/basic_theme_readonly.css
+++ b/addons/mass_mailing/static/src/css/basic_theme_readonly.css
@@ -5,3 +5,9 @@
 #wrapwrap .o_layout.o_basic_theme {
     font-family: -apple-system, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
+
+/* To maintain button size in the readonly mode because
+   the bootstrap 4 button padding is done using `rem` */
+:root {
+    font-size: 12px;
+}
